# picsalot

./: .npmrc  LICENSE  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: commands.rs  main.rs  state.rs  types.rs  utils.rs
src/: commands.ts  main.tsx  styles.css  types.ts  utils.tsx
src/components/: home.tsx  lists.tsx  window.tsx
