[package]
name = "picsalot"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = ["protocol-asset", "devtools"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1.0.103"
parking_lot = "0.12.5"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
walkdir = "2.5.0"
serde_with = "3.21.0"
blake3 = "1.8.5"
zip = "8.6.0"
futures = "0.3.32"
image = "0.25.10"
chrono = "0.4.45"
