[package]
name = "picsalot"
version = "0.3.1"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1.52.4", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1.0.103"
serde_with = "3.21.0"
blake3 = "1.8.5"
futures = "0.3.32"
image = "0.25.10"
chrono = "0.4.45"
rten = "0.24.0"
ocrs = "0.12.2"
